--- a/eSYMb_similarity_rating_project/requirements.txt
+++ b/eSYMb_similarity_rating_project/requirements.txt
@@ -1,7 +1,7 @@
-
-otree>=5.0.0a21
-psycopg2>=2.8.4
-pythran
-packaging
-scikit-image
-pandas
+numpy==2.2.4
+otree==5.11.1
+packaging==24.2
+pandas==2.2.3
+psycopg2-binary==2.9.10
+pythran==0.17.0
+scikit-image==0.25.2
